--- a/apple-pie/styles/style.css
+++ b/apple-pie/styles/style.css
@@ -5,11 +5,20 @@ html {
   font-size: 16px;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
-body, h1, h2, h3, h4, h5, h6, p, ol, ul {
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
   margin: 0;
   padding: 0;
   font-weight: lighter;
@@ -18,7 +27,86 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
 /*  Set the font */
 body {
   font-family: "Helvetica", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 98vw;
 }
 
-/* STYLES */
-/* Write your CSS below */
+img {
+  width: 25vw;
+}
+
+.background-picture {
+  height: 85vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 3rem;
+  background-image: url("../images/apple-pie.jpg");
+  background-size: cover;
+  background-position: center;
+  color: white;
+}
+
+.recipe-intro {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 60vw;
+  margin-top: 60px;
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.recipe-intro > hr {
+  width: 100%;
+}
+
+.ingredients {
+  margin: 40px 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 60vw;
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.ingredients img {
+  align-self: center;
+}
+
+.ingredients hr {
+  width: 100%;
+}
+
+.directions {
+  margin: 10px 0px 40px;
+  display: flex;
+  flex-direction: column;
+  width: 60vw;
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+ul {
+  list-style-type: "- ";
+}
+
+ol {
+  /* 1. Remove the default list style */
+  list-style: none;
+}
+
+ol > li {
+  /* 2. Create a custom list counter */
+  counter-increment: listcounter;
+}
+
+ol > li::before {
+  /*3. Set the new style for the list markers */
+  content: counter(listcounter) ")";
+}
